<resources>
    <string name="app_name">Test2</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="thong_tin_thanh_vien">THÔNG TIN THÀNH VIÊN</string>
    <string name="ma_thanh_vien">Mã thành viên: </string>
    <string name="ho_ten">Họ tên</string>
    <string name="nam_sinh">Năm sinh</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="dia_chi">Địa chỉ</string>
    <string name="huy">HỦY</string>
    <string name="luu">LƯU</string>
</resources>
